# pyramid-temporal

./: .gitignore  .python-version  404.html  CONTRIBUTING.rst  Makefile  README.md  example.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  search.html  setup-dev-env.sh  sitemap.xml
.cursor/rules/: dependency-management.mdc  dev-workflow-activation.mdc  development.mdc  managed-skills.mdc  pyramid-developer.mdc  python-developer.mdc  quality.mdc  test-patterns.mdc  tools-and-setup.mdc
.cursor/skills/code-review/: .managed-skill.md  SKILL.md  pyramid-backend-rules.md
.cursor/skills/create-dev-workflow/: .managed-skill.md
.cursor/skills/dev-workflow/: SKILL.md
.cursor/skills/fix-bug/: SKILL.md
.cursor/skills/manage-dependencies/: .managed-skill.md  SKILL.md
.cursor/skills/manage-dependencies/templates/: pip-rule.md  pip-skill.md  poetry-rule.md  poetry-skill.md  uv-rule.md  uv-skill.md
.cursor/skills/micromonolith/: .managed-skill.md  SKILL.md
.cursor/skills/micromonolith/templates/: micromonolith-rule.md
.cursor/skills/pyramid-core/: .managed-skill.md  SKILL.md  configuration.md  events.md  request-and-response.md  tweens.md
.cursor/skills/pyramid-developer/: .managed-skill.md  SKILL.md
.cursor/skills/pyramid-library/: .managed-skill.md  SKILL.md  library-patterns.md  library-testing.md
.cursor/skills/python-best-practices/: .managed-skill.md  SKILL.md
.cursor/skills/python-developer/: .managed-skill.md  SKILL.md
.cursor/skills/write-pytest/: .managed-skill.md  SKILL.md  invariants.md
.dev-local/: README.md  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-install.sh
.github/actions/codeartifact-login/: action.yml
.github/actions/setup-poetry-env/: action.yml
.github/workflows/: on-release-codeartifact.yml  on-release-main.yml  on-release.yml
docs/: index.md  modules.md
examples/: README.md
examples/basic/: README.md  app.py  development.ini  worker.py
knowledge/: architecture.md
modules/: index.html
planning/: general.md  integration-test.md  open-source.md
pyramid_temporal/: __init__.py  activity.py  cli.py  context.py  environment.py  interceptor.py  transaction_manager.py  worker.py
search/: search_index.json
tests/: __init__.py  conftest.py  test_integration.py  test_poll_query.py  test_settings.py
tests/app/: __init__.py  models.py  views.py  workflows.py
(+1 files in other folders)
